--- a/ClientApp/src/app/formula-lookup/customer-details/customer-details.component.html
+++ b/ClientApp/src/app/formula-lookup/customer-details/customer-details.component.html
@@ -662,7 +662,7 @@
             <p class="font-weight-bold"> Double click for more details</p>
           </div>
           <div style="margin-left:1%;margin-top:1%; height:300px; background-color:white">
-            <table class="table-hover table-bordered" style="margin-left: 10px;width:100%;background-color:white" width="96%">
+            <table class=" table table-hover table-bordered" style="margin-left: 10px;width:100%;background-color:white" width="96%">
 
               <thead>
                 <tr>
@@ -688,7 +688,11 @@
                   <td class="tabledatasize">{{ shippingdata_search.State}}</td>
                   <td class="tabledatasize">{{ shippingdata_search.Country}}</td>
                   <td class="tabledatasize">{{ shippingdata_search.ZipCode}}</td>
-                  <td class="tabledatasize"> <input type="checkbox" [checked]="shippingdata_search.DefaultLocation=='True'"></td>
+                  <td class="tabledatasize">
+
+                    <input type="checkbox"  [checked]="shippingdata_search.DefaultLocation=='True'" (change)="checkSelected($event)">
+                  </td>
+                 
                 </tr>
               </tbody>
             </table>
