--- a/ClientApp/src/app/formula-lookup/formula-lookup.component.html
+++ b/ClientApp/src/app/formula-lookup/formula-lookup.component.html
@@ -619,25 +619,25 @@
 
             <div class="form-inline">
               <label style="margin-left:1%;" for="Cost$/Lb">Cost $/Lb</label>
-              <input type="text" style="margin-left:10px;width:25%" class="form-control" placeholder=""
+              <input type="number" style="margin-left:10px;width:25%" class="form-control" placeholder=""
                      [(ngModel)]="TotalCostInLB1" #Totalcost name="Totalcostin" value="">
 
               <label style="margin-left:3%; " for="TotalQuantity">Total Quantity</label>
-              <input type="text" style="margin-left:10px;width:24.9%" class="form-control" placeholder=""
+              <input type="number" style="margin-left:10px;width:24.9%" class="form-control" placeholder=""
                      [(ngModel)]="totaquantity1" #Totalqty name="Totalqty" value="">
-              <input type="text" style="margin-left:10px;width:10%" class="form-control"
+              <input disabled type="text" style="margin-left:10px;width:10%" class="form-control"
                      placeholder="" [(ngModel)]="unit1" #unit name="units" value="">
 
               <label style="margin-left:2%; " for="TotalQuantity">Total Cost $</label>
-              <input type="text" style="margin-left: 10px; width: 10%; color: red" class="form-control" placeholder=""
+              <input type="number" style="margin-left: 10px; width: 10%; color: red" class="form-control" placeholder=""
                      [(ngModel)]="formulaCost1" #Totalcost name="Totalcost1" value="">
             </div>
             <div class="form-inline">
               <label style="margin-left:32%; " for="TotalQuantity">Scalability Factor</label>
-              <input type="text" style="margin-left:5px;width:24.9%" class="form-control" placeholder=""
+              <input type="number" style="margin-left:5px;width:24.9%" class="form-control" placeholder=""
                      [(ngModel)]="scalef" #scalabilityfactor name="scalability" value="">
               <label style="margin-left:13%;color:red" for="TotalQuantity">Unit Cost $</label>
-              <input type="text" style="margin-left:7px;width:10%;color:red" class="form-control" placeholder="" [(ngModel)]="TotalUnitCost1" #Totalcost name="Totalcost" value="">
+              <input type="number" style="margin-left:7px;width:10%;color:red" class="form-control" placeholder="" [(ngModel)]="TotalUnitCost1" #Totalcost name="Totalcost" value="">
             </div>
 
 
