--- a/ClientApp/src/app/formula-lookup/scalability-factor/scalability-factor.component.html
+++ b/ClientApp/src/app/formula-lookup/scalability-factor/scalability-factor.component.html
@@ -7,7 +7,7 @@
       <div class="form-group col-md-12">
         <div class="form-inline">
           <label style="margin-left:10px;">Enter Quantity</label>
-          <input type="text" class="form-control" size="12" style="margin-left:1%;" id="EnterQuantity"
+          <input type="number" class="form-control" size="12" style="margin-left:1%;" id="EnterQuantity"
                  [(ngModel)]="quantity" name="Enter Quantity" #PropertyName>
           <select id="PRD" class="form-control" style="width:13%;margin-left:0.3%" [(ngModel)]="unitvalue1" name="scunit" (change)="setunit($event)">
             <option selected>g</option>
