--- a/ClientApp/src/app/formula-restriction/rawmaterial-restriction-us/rawmaterial-restriction-us.component.html
+++ b/ClientApp/src/app/formula-restriction/rawmaterial-restriction-us/rawmaterial-restriction-us.component.html
@@ -99,10 +99,10 @@
 
   <div style="background-color: #f6f5f1;border:solid 0.1px darkgrey">
 
-    <button type="submit" class="btn btn-primary  buttoncolor" style="float:right;height:50px;width:100px;margin-top:1%;margin-left:10px" matDialogClose>Close</button>
+    <button type="submit" class="btn btn-primary  buttoncolor" style="float:right;height:50px;width:100px;margin-top:1%;margin-left:10px" (click)="Cleardata();" matDialogClose>Close</button>
     <button type="submit" class="btn btn-primary  buttoncolor" style="float:right;height:50px;width:100px;margin-top:1%;margin-left:10px"(click)="Cleardata();">New</button>
 
-    <button type="submit" class="btn btn-primary  buttoncolor" style="float:right;height:50px;margin-top:1%;margin-left:10px" (click)="Restriction_SaveUpdateUS();"matDialogClose>Save / Update</button>
+    <button type="submit" class="btn btn-primary  buttoncolor" style="float:right;height:50px;margin-top:1%;margin-left:10px" (click)="Restriction_SaveUpdateUS();">Save / Update</button>
 
   </div>
 </div>
