--- a/ClientApp/src/app/productization/add-component/search-component/search-component.component.html
+++ b/ClientApp/src/app/productization/add-component/search-component/search-component.component.html
@@ -34,28 +34,28 @@
         </div>
         <div class="form-inline">
           <Label class="label1" for="inputcust" style="margin-left: 10px; margin-top: 15px; font-size: medium; font-family: Verdana;">*Fillable Component</Label>
-          <mat-radio-button value="true" [checked]="IncidIngredient == 'Yes' ? true : false" style="margin-left:10px;margin-top:15px;" (change)="radioChangeIncidIngredient($event)">Yes</mat-radio-button>
-          <mat-radio-button value="false" [checked]="IncidIngredient == 'No' ? true : false" style="margin-left: 10px;margin-top:15px;" (change)="radioChangeIncidIngredient($event)">No</mat-radio-button>
-          <mat-radio-button value="false" [checked]="IncidIngredient == 'Yes/No' ? true : false" style="margin-left: 10px;margin-top:15px;" (change)="radioChangeIncidIngredient($event)">Both</mat-radio-button>
+          <mat-radio-button value="true" [checked]="fill == 'Yes' ? true : false" style="margin-left:10px;margin-top:15px;" (change)="radioChangeIncidfill($event)">Yes</mat-radio-button>
+          <mat-radio-button value="false" [checked]="fill == 'No' ? true : false" style="margin-left: 10px;margin-top:15px;" (change)="radioChangeIncidfill($event)">No</mat-radio-button>
+          <mat-radio-button value="false" [checked]="Incidfill == 'Yes/No' ? true : false" style="margin-left: 10px;margin-top:15px;" (change)="radioChangeIncidfill($event)">Both</mat-radio-button>
         </div>
 
         <div class="form-inline">
-          <button type="submit" class="btn btn-primary buttoncolor" style="margin-left: 20px; margin-top: 40px; width: 150px; height: 45px" (click)=" searchhsupplier()">Quick save </button>
-          <button type="submit" class="btn btn-primary buttoncolor" style="margin-left: 5px; margin-top: 40px; width: 100px; height: 45px" (click)=" searchhsupplier()">Update</button>
-          <button type="submit" class="btn btn-primary buttoncolor" style="margin-left: 5px; margin-top: 40px; width: 100px; height: 45px" (click)=" searchhsupplier()">New</button>
+          <button type="submit" class="btn btn-primary buttoncolor" style="margin-left: 20px; margin-top: 40px; width: 150px; height: 45px" (click)=" quicksave()">Quick save </button>
+          <button type="submit" class="btn btn-primary buttoncolor" style="margin-left: 5px; margin-top: 40px; width: 100px; height: 45px" (click)="update()">Update</button>
+          <button type="submit" class="btn btn-primary buttoncolor" style="margin-left: 5px; margin-top: 40px; width: 100px; height: 45px" (click)=" clear()">New</button>
 
         </div>
         <!--<div class="form-inline">
-          <label hidden for="inputCategory Name" style="margin-left:20px">Category Code</label>
+        <label hidden for="inputCategory Name" style="margin-left:20px">Category Code</label>
 
-          <input hidden type="text" class="form-control" id="inputCategory Name" placeholder="" style="margin-left:2.5%;margin-top:10px; width: 10%;">
+        <input hidden type="text" class="form-control" id="inputCategory Name" placeholder="" style="margin-left:2.5%;margin-top:10px; width: 10%;">
 
-        </div>
-        <div class="form-inline">
-          <label hidden for="inputDescription" style="margin-right:10px">Category Id</label>
+      </div>
+      <div class="form-inline">
+        <label hidden for="inputDescription" style="margin-right:10px">Category Id</label>
 
-          <input hidden type="text" class="form-control" [(ngModel)]="cateid" id="inputCategoryid" placeholder="" style="margin-left:2.5%;margin-top:10px; width: 10%;" #categorymainval value="" name="categorymainval">
-        </div>-->
+        <input hidden type="text" class="form-control" [(ngModel)]="cateid" id="inputCategoryid" placeholder="" style="margin-left:2.5%;margin-top:10px; width: 10%;" #categorymainval value="" name="categorymainval">
+      </div>-->
       </div>
 
     </div>
@@ -81,13 +81,13 @@
                 <th scope="col">Supplier</th>
                 <th scope="col">Fillable Component</th>
                 <th scope="col">Size</th>
-
+                
 
               </tr>
             </thead>
 
             <tbody>
-              <tr height="20px" *ngFor="let details_comp of loadcomponentdata; let i=index;" (dblclick)="setvalues(details_comp);Close();" #conten>
+              <tr height="20px" *ngFor="let details_comp of loadcomponentdata; let i=index;"  (dblclick)="setvalues(details_comp);Close();" #conten>
                 <td></td>
                 <td>{{details_comp.componentitemno}}</td>
                 <td>{{ details_comp.componentname}}</td>
@@ -105,8 +105,8 @@
 
         </div>
       </div>
+      </div>
     </div>
-  </div>
 
   <div style="background-color: #f6f5f1;border:solid 0.1px darkgrey">
 
@@ -114,8 +114,10 @@
 
     <button type="submit" class="btn btn-primary  buttoncolor" style="float:right;height:40px;margin-top:1%" matDialogClose>Close</button>
 
-
+    <h5 style="float:left;margin-top:10px;color:maroon">{{count}} Record(s)</h5>
 
   </div>
 
-</div>
+  </div>
+
+
