--- a/ClientApp/src/app/productization/cmo/cmo.component.html
+++ b/ClientApp/src/app/productization/cmo/cmo.component.html
@@ -15,13 +15,13 @@
 
           <button type="submit" class="btn btn-primary buttoncolor" style="margin-left: 10px; margin-top: 50px; padding-top: 10px; width: 170px; height: 46px" (click)=" searchcmo()">Search CMO </button>
 
-          <button type="submit" class="btn btn-primary buttoncolor" style="margin-left: 10px; margin-top: 50px; padding-top: 10px; width: 170px; height: 46px" (click)=" clearcmo()">Clear</button>
+          <button type="submit" class="btn btn-primary buttoncolor" style="margin-left: 10px; margin-top: 50px; padding-top: 10px; width: 170px; height: 46px" (click)=" clear()">Clear</button>
         </form>
 
         <form class="form-inline" style="    background-color: #f6f5f1">
           <label for="CMON" style="margin-left: 100px; margin-top: 50px; font-size: medium; font-family: Verdana;">CMO Number</label>
           <input type="text" style="margin-left: 10px; margin-top: 50px;" class="form-control" placeholder="" id="CMNo" size="80" [(ngModel)]="CMOnumber" name="cmno" value="">
-        </form>
+          </form>
 
 
 
@@ -105,10 +105,10 @@
     <div style="background-color: #f6f5f1;border:solid 0.1px darkgrey">
 
       <button type="submit" class="btn btn-primary  buttoncolor" style="float: right; margin-right: 200px; height: 50px; width: 150px; margin-top: 1%" matDialogClose>Back</button>
-      <button type="submit" class="btn btn-primary  buttoncolor" style="float:right;margin-right:5px;height:50px;width:150px;margin-top:1%" (click)="savecmo();">Save</button>
-      <button type="submit" class="btn btn-primary  buttoncolor" style="float: right; margin-right: 5px; height: 50px; width: 150px; margin-top: 1%" (click)="update();">Update</button>
-      <button type="submit" class="btn btn-primary  buttoncolor" style="float: right; margin-right: 5px; height: 50px; width: 150px; margin-top: 1%" (click)="clearcmo();">New</button>
-      <button type="submit" class="btn btn-primary  buttoncolor" style="float: right; margin-right: 5px; height: 50px; width: 200px; margin-top: 1%" (click)="deletecmo();">Delete CMO</button>
+      <button type="submit" class="btn btn-primary  buttoncolor" style="float:right;margin-right:5px;height:50px;width:150px;margin-top:1%" [hidden]="isproductsave" (click)="savecmo();clear();">Save</button>
+      <button type="submit" class="btn btn-primary  buttoncolor" style="float: right; margin-right: 5px; height: 50px; width: 150px; margin-top: 1%"[hidden]="isproductupdate"(click)="update();clear();target2();">Update</button>
+      <button type="submit" class="btn btn-primary  buttoncolor" style="float: right; margin-right: 5px; height: 50px; width: 150px; margin-top: 1%"(click)="clear();target2();">New</button>
+      <button type="submit" class="btn btn-primary  buttoncolor" style="float: right; margin-right: 5px; height: 50px; width: 200px; margin-top: 1%" (click)="deletecmo();clear();target2();">Delete CMO</button>
 
 
     </div>
